# CRHPC2025

./: .gitignore  CMakeLists.txt  README.md  setup-gpu.sh  setup.sh
basics/: CMakeLists.txt  run.slurm
basics/1.initialization/: CMakeLists.txt  main.cpp
basics/2.functors/: CMakeLists.txt  main.cpp
basics/3.lambda/: CMakeLists.txt  main.cpp
basics/4.lambda_correct/: CMakeLists.txt  main.cpp
basics/5.views/: CMakeLists.txt  main.cpp
basics/6.mirror_view/: CMakeLists.txt  main.cpp
basics/7.parallel_for/: CMakeLists.txt  main.cpp
basics/Spmv/: CMakeLists.txt  data.txt
basics/Spmv/BEGIN/: CMakeLists.txt  main.cpp
basics/Spmv/SOLUTION/: CMakeLists.txt  main.cpp
basics/cpu_vs_gpu/: CMakeLists.txt  main.cu  main_block.c  main_coalesced.cu  main_naive.c  matrix.c  matrix.h
basics/heat_simulation/: CMakeLists.txt
basics/heat_simulation/BEGIN/: CMakeLists.txt  main.cpp
basics/heat_simulation/SOLUTION/: CMakeLists.txt  main.cpp
basics/k_means/: CMakeLists.txt  dataset.csv
basics/k_means/BEGIN/: CMakeLists.txt  main.cpp
basics/k_means/SOLUTION/: CMakeLists.txt  main.cpp
basics/k_means/gen_datasets/: gen_datasets.R  plot_clusters.R
basics/matmul/: CMakeLists.txt
basics/matmul/BEGIN/: CMakeLists.txt  main.cpp
basics/matmul/SOLUTION/: CMakeLists.txt  main.cpp
basics/pi_leibniz/BEGIN/: CMakeLists.txt  main.cpp
basics/pi_leibniz/SOLUTION/: CMakeLists.txt  main.cpp
challenge/SKELETONS/findpi/: CMakeLists.txt
challenge/SKELETONS/nbody_serial/: CMakeLists.txt  nbody_serial.cpp
challenge/SKELETONS/random_walk_serial/: CMakeLists.txt  build_random_walk.sh  random_walk.cpp
challenge/SOLUTIONS/1_nbody_mpi_kokkos/: nbody_mpi_kokkos.cpp  runsim.slurm  write_particles.h
challenge/SOLUTIONS/2_nbody_kokkos/: CMakeLists.txt  build_nbody.sh  nbody_kokkos.cpp
distributed_memory/1_hello_world/: helloworld.cpp  helloworld.slurm  mpi_helloworld.cpp  mpi_helloworld.slurm
distributed_memory/2_p2p_comm/: deadlock  deadlock.cpp  deadlock.slurm  p2p.cpp  p2p.slurm
distributed_memory/3_collectives/: allgather.cpp  allreduce.cpp  barrier.cpp  broadcast.cpp  gather.cpp  reduction.cpp  run.slurm  scatter.cpp
distributed_memory/4_comm_patterns/halo_exchange/: CMakeLists.txt  build_halo.sh  halo_exchange.cpp  write_halo.h
distributed_memory/4_comm_patterns/ring_exchange/: ring_exchange.cpp
distributed_memory/5_mpi_plus_x/p2p/: CMakeLists.txt  build_p2p.sh  p2p.cpp  run.slurm
distributed_memory/A_practice/: INSTRUCTIONS.md  findpi.cpp  findpi_2.cpp  matv.cpp
distributed_memory/A_solutions/: findpi  findpi_2.cpp  findpi_solution_1.cpp  findpi_solution_2.cpp  findpi_solution_3.cpp  matv.cpp  ring_traversal.cpp  run.slurm
visualization/practice/: CMakeLists.txt  PRACTICE.md  build_practice.sh  line.cpp  sphere.cpp  structured_grid.cpp
visualization/random_walk/: CMakeLists.txt  build_random_walk.sh  random_walk.cpp  run.slurm
visualization/wave_equation/: CMakeLists.txt  build_wave_equation.sh  wave_equation.cpp
